# qt-brbooth

./: .gitignore  1  CMakeLists.txt  CMakeLists_tflite.txt  CONTRIBUTING.md  DEPLOYMENT.md  FPS_IMPROVEMENTS.md  HAND_DETECTION_README.md  INTEGRATION_GUIDE.md  OPENCV_PATH_INSTRUCTIONS.txt  PERSON_SCALING_README.md  README.md  README_PERSON_DETECTION.md  README_YOLO.md  SETUP.md  TFLITE_INTEGRATION_README.md  TFLITE_SETUP.md  YOLOV5_INTEGRATION_README.md  YOLO_SETUP.md  advanced_hand_detector.cpp  advanced_hand_detector.h  background.cpp  background.h  background.ui  brbooth.cpp  brbooth.h  brbooth.ui  build.sh  build_test.bat  build_tflite_project.bat  build_yolo_engine.bat  build_yolo_no_plugins.bat  camera.cpp  camera.h  capture.cpp  capture.h  capture.ui  convert_yolo.py  deeplabv3.tflite  detection_manager.cpp  (+43 more)
examples/: booth_integration_example.h  capture_with_yolo.h  person_detection_example.cpp  yolo_example.cpp  yolo_example.pro
include/algorithms/: advanced_hand_detector.h  mediapipe_like_hand_tracker.h  personsegmentation.h  segmentation_manager.h  tflite_segmentation_widget.h
include/algorithms/hand_detection/: hand_detector.h  trt_hand_landmarker.h
include/algorithms/lighting_correction/: lighting_corrector.h
include/core/: amd_gpu_verifier.h  brbooth.h  camera.h  capture.h  capture_edge_blending.h  common_types.h  system_monitor.h
include/ui/: background.h  confirm.h  dynamic.h  final.h  iconhover.h  idle.h  loading.h  ui_manager.h
src/: main.cpp
src/algorithms/hand_detection/: advanced_hand_detector.cpp  hand_detector.cpp  mediapipe_like_hand_tracker.cpp  trt_hand_landmarker.cpp
src/algorithms/lighting_correction/: lighting_corrector.cpp
src/algorithms/person_detection/: personsegmentation.cpp  segmentation_manager.cpp  simplepersondetector.cpp
src/algorithms/segmentation/: tflite_deeplabv3.cpp  tflite_segmentation_widget.cpp
src/core/: amd_gpu_verifier.cpp  brbooth.cpp  camera.cpp  capture.cpp  capture_dynamic.cpp  capture_edge_blending.cpp  capture_green_screen.cpp  capture_lighting.cpp  capture_segmentation.cpp  gpu_memory_pool.cpp  system_monitor.cpp
src/ui/: background.cpp  confirm.cpp  dynamic.cpp  final.cpp  foreground.cpp  iconhover.cpp  idle.cpp  loading.cpp  ui_manager.cpp
src/yolo/: persondetector.cpp  persondetector.h  yolov5detector.cpp  yolov5detector.h
tools/: build_trt_engine.py  export_mediapipe_hands.py
ui/: background.ui  brbooth.ui  confirm.ui  dynamic.ui  final.ui  foreground.ui  idle.ui  loading.ui
yolo-env/: pyvenv.cfg
yolo-env/Scripts/: activate  activate.bat
yolo-venv/: pyvenv.cfg
yolo-venv/Scripts/: activate  activate.bat
yolov5/: detect.py
